--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>index Page</title>
 </head>
 <body>
-    <h1>Welcome to the  Index Page of html from Abdullah Mit</h1>
+    <h1>Welcome to the  Index Page of html from Abdullah Mir and after cpmleting auto deploy yml file</h1>
 </body>
 </html>
