--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Welcome to the  Index Page of html from Abdullah Mir and after cpmleting auto deploy yml file</h1>
+    <h2>my firt surge deployment project updating index.html</h2>
 </body>
 </html>
